--- a/DefendersDeck.App/AppShell.xaml
+++ b/DefendersDeck.App/AppShell.xaml
@@ -4,12 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:DefendersDeck.App"
-    Shell.FlyoutBehavior="Flyout"
+    Shell.FlyoutBehavior="Disabled"
     Title="DefendersDeck.App">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:Views.RegisterPage}"
-        Route="LoginPage" />
+    <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:Views.LoginPage}" />
+    <ShellContent Route="HomePage" ContentTemplate="{DataTemplate local:Views.HomePage}" />
+    <ShellContent Route="MarketPage" ContentTemplate="{DataTemplate local:Views.MarketPage}" />
 
 </Shell>
